@@ -4,6 +4,8 @@ Changelog
 0.9.0 (?)
 ---------
 
+* New functions and classes:
+  - logs.add_detail_level
 * Bugfixes:
   - Added missing default kwargs to monkeypatched version of
     logging.LogAdapter method in logs.add_log_level
